[package]
name = "p2p_channel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-skiplist = "0.1"
dashmap = "5.4.0"
#crossbeam-channel = "0.5.6"
crossbeam = "0.8.2"
parking_lot = "0.12.1"
mio = {version = "0.8.6",features = ["os-poll", "net"]}
log = "0.4.17"
rand = "0.8.5"
chrono = "0.4.23"