[package]
name = "p2p_channel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-skiplist = "0.1"
dashmap = "6"
#crossbeam-channel = "0.5.6"
crossbeam = "0.8.2"
parking_lot = "0.12.1"
mio = {version = "1",features = ["os-poll", "net"]}
log = "0.4.17"
rand = "0.8.5"
chrono = "0.4.23"
anyhow = "1.0.86"
stun-format = { version = "1.0.1", features = ["fmt", "rfc3489"] }
network-interface = "2.0.0"
socket2 = { version = "0.5.7", features = ["all"] }

[target.'cfg(target_os = "windows")'.dependencies]
libloading = "0.8.0"
windows-sys = {version = "0.59.0",features = [ "Win32_Foundation",
    "Win32_NetworkManagement",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_System_IO",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",]}